fix(ui): Long lines of code won't wrap inside container.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -760,6 +760,7 @@ footer {
   font-family: "Fira Mono";
   font-size: 14px;
   line-height: 1.4em;
+  overflow-wrap: anywhere;
 }
 
 .copy {
